--- a/main.css
+++ b/main.css
@@ -1,6 +1,7 @@
 body {
   background-image: url('./assets/background1.jpg');
   background-size: cover;
+  font-family: 'Roboto', sans-serif;
 }
 
 #container {
