--- a/main.css
+++ b/main.css
@@ -1,5 +1,6 @@
 body {
   background-image: url('./assets/background1.jpg');
+  background-attachment: fixed;
   background-size: cover;
   font-family: 'Roboto', sans-serif;
   padding-top: 20px;
