--- a/main.css
+++ b/main.css
@@ -4,6 +4,7 @@ body {
   background-size: cover;
   font-family: 'Roboto', sans-serif;
   padding-top: 20px;
+  padding-bottom: 20px;
 }
 
 #container {
