--- a/main.css
+++ b/main.css
@@ -1,5 +1,5 @@
 body {
-  background-image: url('./assets/background1.jpg');
+  background-image: url('./assets/please.jpg');
   background-attachment: fixed;
   background-size: cover;
   font-family: 'Roboto', sans-serif;
@@ -118,7 +118,7 @@ height: 500px;
   height: 190px;
   float: right;
   text-align: center;
-  color: rgb(224, 122, 0);
+  color: #000;
 }
 
 #missionTitle h1 {
