--- a/main.css
+++ b/main.css
@@ -8,7 +8,6 @@ body {
 }
 
 #container {
-  height: 900px;
   width: 900px;
   margin: auto;
   background-color: rgba(255, 255, 255, .70);
@@ -28,20 +27,23 @@ body {
   height: 190px;
   float: right;
   text-align: center;
+  background-color: rgba(255, 255, 255, .85);
 }
 
 #headerTitle h1 {
+  margin-bottom: 10px;
   font-size: 47px;
 }
 
 #headerTitle h2 {
+  margin: 0px;
   font-size: 20px;
 }
 
 #sideMenu {
   background-color: rgba(255, 255, 255, .85);
   width: 190px;
-  height: 710px;
+  
   text-align: center;
   display: flex;
   flex-direction: column;
@@ -74,7 +76,7 @@ body {
 
 #content {
 display: flex;
-height: 500px;
+height: 1000px;
 }
 
 #slideshow {
@@ -172,4 +174,21 @@ height: 500px;
 #board h3 {
   color: rgb(224, 122, 0);
   text-decoration: underline;
+}
+
+.announcement {
+  height: 200px;
+  font-size: 20px;
+  text-align: center;
+  margin-top: 5px;
+}
+
+.announcement h1 {
+  color: orange;
+}
+
+.highlight {
+  color: rgb(51, 153, 51);
+  text-decoration: underline;
+  font-weight: bold;
 }
