--- a/main.css
+++ b/main.css
@@ -4,7 +4,7 @@ body {
   background-size: cover;
   font-family: 'Roboto', sans-serif;
   padding-top: 20px;
-  padding-bottom: 20px;
+  padding-bottom: 20px; 
 }
 
 #container {
@@ -75,7 +75,7 @@ body {
 
 #content {
   display: flex;
-  height: 900px;
+  height: 1500px;
 }
 
 #slideshow {
@@ -189,6 +189,10 @@ body {
   padding-right: 10px;
   padding-left: 10px;
   text-align: justify;
+}
+
+.announcement h3 {
+  text-align: center;
 }
 
 .highlight {
