--- a/main.css
+++ b/main.css
@@ -27,6 +27,7 @@ body {
   height: 190px;
   float: right;
   text-align: center;
+  text-shadow: 0px 1px 1px rgba(150, 150, 150, 1);
   }
 
 #headerTitle h1 {
