--- a/main.css
+++ b/main.css
@@ -10,7 +10,7 @@ body {
 #container {
   width: 900px;
   margin: auto;
-  background-color: rgba(255, 255, 255, .70);
+  background-color: rgba(255, 255, 255, 0.83);
 }
 
 #mainHeader {
@@ -76,7 +76,7 @@ body {
 
 #content {
   display: flex;
-  height: 1800px;
+  height: 2000px;
 }
 
 #slideshow {
